--- a/算法导论目录.md
+++ b/算法导论目录.md
@@ -80,7 +80,7 @@
   + 第12章 二叉搜索树
     + 12.1	什么是二叉搜索树
       + 12.2查询二叉搜索树
-      + 12.3插入和排序
+      + 12.3插入和删除
       + 12.4随机构建二叉搜索树
   + 第13章 红黑树
     + 13.1	红黑树的性质
